# jm-python-template

./: .editorconfig  .gitignore  .gitlab-ci.yml  .markdown-link-check.json  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .readthedocs.yml  .taplo.toml  .vale.ini  .yamllint  AUTHORS.md  CHANGELOG.md  README.md  REUSE.toml  SECURITY.md  Taskfile.yml  biome.json  commitlint.config.js  cspell.config.yaml  mkdocs.yml  package.json  pnpm-lock.yaml  project-words.txt  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: .yamllint  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  branch-name-patterns.yml  dependabot.yml  dependency-review-config.yml  gitleaks.toml  invite-contributors.yml  labeler.yml  labels.yml  project-config.yml  release-drafter.yml
.github/DISCUSSION_TEMPLATE/: q-a.yml
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-documentation.yml
.github/actions/python-setup/: action.yml
.github/badges/: coverage.json
.github/config/: gitleaks.toml  issue-triage.json  labeler.yml  labels.yml  project-management.json  release-changelog-config.json  release-drafter.yml
.github/scripts/: add-labels.js  dependency-report.js  enable-auto-merge.js  issue-handler.js  labels-report.js  pr-automation.js  update-coverage-badge
.github/workflows/: ci.yml  codeql-analysis.yml  dependabot-merge.yml  docs-deploy.yml  docs-lint.yml  issue-managment.yml  labels-sync.yml  maintenance.yml  pr-automation.yml  release.yml  scorecard.yml  stale-issues.yml
dev/: 404.html  index.html  sitemap.xml
dev/about/: index.html
dev/community/code_of_conduct/: index.html
dev/community/contributing/: index.html
dev/community/faq/: index.html
dev/de/: index.html
dev/de/about/changelog/: index.html
dev/de/api-reference/: index.html
dev/de/community/code_of_conduct/: index.html
dev/de/community/contributing/: index.html
dev/de/community/faq/: index.html
dev/de/developer-guide/: index.html
dev/developer-guide/: index.html
dev/user-guide/: index.html
docs/: api-reference.md  index.md
docs/.overrides/partials/: copyright.html
docs/about/: index.md
docs/community/: code_of_conduct.de.md  code_of_conduct.md
docs/css/: custom.css
docs/developer-guide/: index.md
docs/en/: api-reference.md  index.md
docs/en/about/: changelog.md  index.md
docs/en/community/: code_of_conduct.md  contributing.md
docs/en/developer-guide/: index.md  security.md
docs/en/getting-started/: index.md
docs/en/user-guide/: index.md
docs/getting-started/: index.md
docs/user-guide/: index.md
latest/: objects.inv
latest/about/changelog/: index.html
latest/api-reference/: index.html
latest/css/: custom.css
latest/de/about/: index.html
latest/de/developer-guide/security/: index.html
latest/de/getting-started/: index.html
latest/de/includes/abbreviations/: index.html
latest/de/user-guide/: index.html
latest/developer-guide/security/: index.html
latest/getting-started/: index.html
latest/includes/abbreviations/: index.html
latest/search/: search_index.json
scripts/: compile-babel-translations  compile-babel-translations.sh  compile-qt-translations  compile-qt-translations.sh  extract-babel-translations  extract-babel-translations.sh  extract_qt_translations  extract_qt_translations.sh
src/jm_python_template/: __about__.py  app.py  main.py
src/jm_python_template/buildprocess/: core.py
src/jm_python_template/gui/: resources.qrc
tests/unit/: __init__.py  test_sample.py
tests/unit/buildprocess/: test_core.py
tests/unit/core/: test_buildprocess.py
